
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static int compareLatency(const void *a, const void *b) {
    return (*(long long*)a)-(*(long long*)b);
}
